# hh-api-wrapper

./: README.md  config.py  main.py  pyproject.toml
data/: vacancies.json  vacancies.txt
src/: get_vacancies.py  hh_api.py  json_saver.py  saver.py  txt_saver.py  utils.py  vacancy.py
tests/: conftest.py  test_vacancy.py
