[tool.poetry]
name = "cw4"
version = "0.1.0"
description = ""
authors = ["Mikhail Mikhailusov <mishael000@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.2"
flake8 = "^7.1.0"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
